# AoC2024

./: .gitignore  README.md  aoc.cabal  shell.nix
day1/: main.hs
day2/: main.hs
day3/: main.hs
day4/: main.hs
day5/: main.hs
day6/: main.hs
day7/: main.hs
