cabal-version:      2.4
name:               aoc
version:            0.1.0.0
executable day1
    main-is:          day1/main.hs
    build-depends:    base, containers, split
    default-language: Haskell2010
executable day2
    main-is:          day2/main.hs
    build-depends:    base, split
    default-language: Haskell2010
executable day3
    main-is:          day3/main.hs
    build-depends:    base
    default-language: Haskell2010
executable day4
    main-is:          day4/main.hs
    build-depends:    base
    default-language: Haskell2010
executable day5
    main-is:          day5/main.hs
    build-depends:    base, containers, split
    default-language: Haskell2010
